--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-        android:name=".YemaApplication"
+        android:name=".DorideApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -106,7 +106,6 @@
         <activity android:name=".ui.activity.setting.RemotePasswdManageActivity" />
         <activity android:name=".ui.activity.setting.ResetRemotePasswdActivity" />
         <activity android:name=".ui.activity.setting.VcodeResetRemotePasswdActivity" />
-        <activity android:name=".ui.activity.setting.GeneralManageActivity" />
         <activity android:name=".ui.activity.setting.MsgManageActivity" />
         <activity android:name=".ui.activity.setting.DeviceManageActivity" />
         <activity android:name=".ui.activity.setting.LoginPasswdManageActivity" />
