--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.lzy.net:okgo:3.0.4'
-    implementation 'com.github.bumptech.glide:glide:4.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
     implementation 'com.android.support:design:26.1.0'
     compile 'com.contrarywind:Android-PickerView:3.2.7'
     compile files('libs/AMap3DMap_5.5.0_AMapNavi_5.4.0_AMapSearch_5.5.0_AMapLocation_3.6.1_20171107.jar')
