--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!--<activity android:name=".ui.TestActivity"/>-->
+        <!-- <activity android:name=".ui.TestActivity"/> -->
         <activity
             android:name=".ui.activity.login.UserLoginActivity"
             android:launchMode="singleTask"/>
@@ -138,6 +138,7 @@
             android:name="com.tencent.android.tpush.XGPushReceiver"
             android:process=":xg_service_v3">
             <intent-filter android:priority="0x7fffffff">
+
                 <!-- 【必须】 信鸽SDK的内部广播 -->
                 <action android:name="com.tencent.android.tpush.action.SDK"/>
                 <action android:name="com.tencent.android.tpush.action.INTERNAL_PUSH_MESSAGE"/>
@@ -154,6 +155,7 @@
             android:name=".push.MessageReceiver"
             android:exported="true">
             <intent-filter>
+
                 <!-- 接收消息透传 -->
                 <action android:name="com.tencent.android.tpush.action.PUSH_MESSAGE"/>
                 <!-- 监听注册、反注册、设置/删除标签、通知被点击等处理结果 -->
@@ -166,6 +168,7 @@
             android:name="com.tencent.android.tpush.XGPushActivity"
             android:exported="false">
             <intent-filter>
+
                 <!-- 若使用AndroidStudio，请设置android:name="android.intent.action" -->
                 <action android:name="android.intent.action"/>
             </intent-filter>
@@ -189,6 +192,7 @@
             android:name="com.tencent.android.tpush.rpc.XGRemoteService"
             android:exported="true">
             <intent-filter>
+
                 <!-- 【必须】 请修改为当前APP包名 .PUSH_ACTION, 如demo的包名为：com.qq.xgdemo -->
                 <action android:name="com.carlt.doride.PUSH_ACTION"/>
             </intent-filter>
@@ -206,12 +210,11 @@
             android:authorities="com.carlt.doride.TPUSH_PROVIDER"
             android:exported="false"/>
 
-        <!-- 【必须】 【注意】authorities修改为 包名.TENCENT.MID.V3, 如demo的包名为：com.qq.xgdemo-->
+        <!-- 【必须】 【注意】authorities修改为 包名.TENCENT.MID.V3, 如demo的包名为：com.qq.xgdemo -->
         <provider
             android:name="com.tencent.mid.api.MidProvider"
             android:authorities="com.carlt.doride.TENCENT.MID.V3"
-            android:exported="true"></provider>
-
+            android:exported="true"/>
 
         <!-- 【必须】 请将YOUR_ACCESS_ID修改为APP的AccessId，“21”开头的10位数字，中间没空格 -->
         <meta-data
@@ -221,5 +224,7 @@
         <meta-data
             android:name="XG_V2_ACCESS_KEY"
             android:value="A1E3L6XII13N"/>
+
     </application>
+
 </manifest>
