--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,9 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     compile 'com.contrarywind:Android-PickerView:3.2.7'
     compile files('libs/AMap3DMap_5.5.0_AMapNavi_5.4.0_AMapSearch_5.5.0_AMapLocation_3.6.1_20171107.jar')
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:26.x'
     compile 'com.android.support:multidex:1.0.0'
     implementation 'pub.devrel:easypermissions:1.0.1'
     implementation 'com.orhanobut:logger:2.2.0'
+    compile 'com.blankj:utilcode:1.7.1'
 }
