远程设置模块资源文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,14 @@ android {
     }
     buildToolsVersion '27.0.3'
 }
-
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    compile(name: 'javaapkcomdatapicker', ext: 'aar')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
