--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     compile files('libs/mid-core-sdk-3.7.2.jar')
     compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
     compile files('libs/Xg_sdk_v3.1_20170417_0946.jar')
+    compile files('libs/httpmime-4.1.3.jar')
+    compile files('libs/commons-codec-1.4.jar')
+    compile files('libs/commons-net-2.2.jar')
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'org.greenrobot:eventbus:3.1.0-RC'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
@@ -75,4 +78,6 @@ dependencies {
     implementation 'pub.devrel:easypermissions:1.0.1'
     implementation 'com.orhanobut:logger:2.2.0'
     compile 'com.blankj:utilcode:1.7.1'
+
+
 }
