--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -226,7 +226,17 @@
                 <action android:name="com.tencent.android.tpush.action.FEEDBACK"/>
             </intent-filter>
         </receiver>
+        <receiver
+            android:name="com.carlt.sesame.push.MessageReceiver"
+            android:exported="true">
+            <intent-filter>
 
+                <!-- 接收消息透传 -->
+                <action android:name="com.tencent.android.tpush.action.PUSH_MESSAGE"/>
+                <!-- 监听注册、反注册、设置/删除标签、通知被点击等处理结果 -->
+                <action android:name="com.tencent.android.tpush.action.FEEDBACK"/>
+            </intent-filter>
+        </receiver>
         <!-- 【注意】 如果被打开的activity是启动模式为SingleTop，SingleTask或SingleInstance，请根据通知的异常自查列表第8点处理 -->
         <activity
             android:name="com.tencent.android.tpush.XGPushActivity"
@@ -243,7 +253,10 @@
             android:name=".push.PushService"
             android:exported="true"
             android:persistent="true"/>
-
+        <service
+            android:name="com.carlt.sesame.push.PushService"
+            android:exported="true"
+            android:persistent="true"/>
         <!-- 【必须】 信鸽service -->
         <service
             android:name="com.tencent.android.tpush.service.XGPushServiceV3"
