--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,9 +57,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile files('libs/jg_filter_sdk_1.1.jar')
-    compile files('libs/mid-core-sdk-3.7.2.jar')
     compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
-    compile files('libs/Xg_sdk_v3.1_20170417_0946.jar')
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/commons-codec-1.4.jar')
     compile files('libs/commons-net-2.2.jar')
@@ -82,4 +80,6 @@ dependencies {
     compile 'com.blankj:utilcode:1.7.1'
     implementation files('libs/alipaySdk-20160223.jar')
     implementation files('libs/ZXingCode.jar')
+    implementation files('libs/Xg_sdk_v3.2.5_20180720_1612.jar')
+    implementation files('libs/mid-core-sdk-4.0.6.jar')
 }
