--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'org.greenrobot:eventbus:3.1.0-RC'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.lzy.net:okgo:3.0.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -82,4 +82,7 @@ dependencies {
     implementation files('libs/ZXingCode.jar')
     implementation files('libs/Xg_sdk_v3.2.5_20180720_1612.jar')
     implementation files('libs/mid-core-sdk-4.0.6.jar')
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
