1，加入车辆新状态：已上电 2，大乘车辆激活加入pin码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -188,6 +188,8 @@
         <activity android:name="com.carlt.sesame.ui.activity.career.report.newui.DayActivity" />
         <activity android:name="com.carlt.sesame.ui.activity.career.report.newui.GpsTrailActivity" />
         <activity android:name="com.carlt.sesame.ui.activity.usercenter.login.SesameActivateActivity" />
+        <activity android:name="com.carlt.sesame.ui.activity.setting.SesameLoginPasswdManageActivity" />
+        <activity android:name="com.carlt.sesame.ui.activity.usercenter.ResetPasswordActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
