添加大乘远程操作 下拉加载,以及界面修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -293,7 +293,7 @@
             android:name="XG_V2_ACCESS_KEY"
             android:value="A1E3L6XII13N" />
 
-        <activity android:name=".ui.activity.login.UpDateActivity"></activity>
+        <activity android:name=".ui.activity.login.UpDateActivity" />
     </application>
 
 </manifest>
