--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -293,7 +293,9 @@
             android:name="XG_V2_ACCESS_KEY"
             android:value="A1E3L6XII13N" />
 
-        <activity android:name=".ui.activity.login.UpDateActivity" />
+        <activity android:name=".ui.activity.login.UpDateActivity"
+            android:launchMode="singleInstance"
+            />
     </application>
 
 </manifest>
