1.  芝麻E02 新能源汽车取消 "芝麻"字眼；芝麻小秘书，改为，小秘书；
2. 当车辆正在充电时，车辆状态为：您的爱车正在充电；

3. 新能源车型的 首页（背景图、车模图）、座驾（背景图、车模图）、远程（车模图）走后台配置，从配置中获取；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -204,7 +204,7 @@
         <activity android:name="com.carlt.sesame.ui.activity.setting.SesameLoginPasswdManageActivity"/>
         <activity android:name="com.carlt.sesame.ui.activity.usercenter.ResetPasswordActivity"/>
         <activity android:name=".ui.activity.setting.TrafficPackagePurchaseLogActivity"/>
-
+        <activity android:name=".ui.activity.login.ActivateHelpActivity"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.carlt.doride.fileprovider"
