1，修复进入回放全屏页面奔溃bug 2，合并so库，解决使用高德地图奔溃bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -239,7 +239,7 @@
         <activity
             android:name="com.carlt.chelepie.view.activity.FullPlayActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/activity_theme">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
         <provider
