修改吐司适配下小米,修改相册下载列表删除为空时候的逻辑,更换ImageView错误默认图

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,7 +100,9 @@
         <activity android:name=".ui.activity.home.DayActivity"/>
         <activity android:name=".ui.activity.home.InformationCentreActivity"/>
         <activity android:name=".ui.activity.home.GpsTrailActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            />
         <activity android:name=".ui.activity.carstate.CarSaftyListActivity"/>
         <activity android:name=".ui.activity.carstate.MainTestingActivity"/>
         <activity android:name=".ui.activity.carstate.CarStateNowActivity"/>
