--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -357,6 +357,7 @@
             android:launchMode="singleInstance"/>
         <activity android:name=".ui.activity.setting.FlowPackageRechargeActivity">
         </activity>
+        <activity android:name="com.carlt.chelepie.view.activity.DownloadUpgradeActivity"></activity>
     </application>
 
 </manifest>
