跟新小米,华为,oppo是手机相册视屏播放问题,相册全部没有事件的bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -221,10 +221,10 @@
         <activity android:name="com.carlt.chelepie.view.activity.ManageStorageActivity"/>
         <activity android:name="com.carlt.chelepie.view.activity.ManageTimesActivity"/>
         <activity android:name="com.carlt.chelepie.view.activity.MyMediaListActivity"
-            android:screenOrientation="portrait"
+
             >
 
-        </activity>>
+        </activity>
         <activity android:name="com.carlt.chelepie.view.activity.PicViewPagerActivity"/>
         <activity android:name="com.carlt.chelepie.view.activity.VideoQualityActivity"/>
         <!-- ############ 需要横屏的Activity ############ -->
