1，车况检测接口版本改为102

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,89 +93,165 @@
         <!-- <activity android:name=".ui.TestActivity"/> -->
         <activity
             android:name=".ui.activity.login.UserLoginActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".ui.activity.home.RemindActivity"/>
-        <activity android:name=".ui.activity.home.ReportActivity"/>
-        <activity android:name=".ui.activity.home.MonthActivity"/>
-        <activity android:name=".ui.activity.home.DayActivity"/>
-        <activity android:name=".ui.activity.home.InformationCentreActivity"/>
-        <activity android:name=".ui.activity.home.GpsTrailActivity"/>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.home.RemindActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.home.ReportActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.home.MonthActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.home.DayActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.home.InformationCentreActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.home.GpsTrailActivity"
+                  android:screenOrientation="portrait"/>
         <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.activity.carstate.CarSaftyListActivity"/>
-        <activity android:name=".ui.activity.carstate.MainTestingActivity"/>
-        <activity android:name=".ui.activity.carstate.CarStateNowActivity"/>
-        <activity android:name=".ui.activity.carstate.CarLocationActivity"/>
-        <activity android:name=".ui.activity.carstate.CarSynchronizeLocationActivity"/>
-        <activity android:name=".ui.activity.carstate.SearchAddrActivity"/>
-        <activity android:name=".ui.activity.remote.RemoteLogActivity"/>
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.CarSaftyListActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.MainTestingActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.CarStateNowActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.CarLocationActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.CarSynchronizeLocationActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.SearchAddrActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.remote.RemoteLogActivity"
+                  android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activity.login.DeviceBindActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan"/>
-        <activity android:name=".ui.activity.login.ResetPasswdActivity"/>
-        <activity android:name=".ui.activity.login.ActivateBindActivity"/>
-        <activity android:name=".ui.activity.login.UserRegisterActivity"/>
-        <activity android:name=".ui.activity.setting.PersonInfoActivity"/>
-        <activity android:name=".ui.activity.setting.CarManagerActivity"/>
-        <activity android:name=".ui.activity.setting.TravelAlbumActivity"/>
-        <activity android:name=".ui.activity.setting.PhotoDisplayActivity"/>
-        <activity android:name=".ui.activity.setting.MaintenanceMileageEditActivity"/>
-        <activity android:name=".ui.activity.setting.NicknameEditActivity"/>
+        <activity android:name=".ui.activity.login.ResetPasswdActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.login.ActivateBindActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.login.UserRegisterActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.PersonInfoActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.CarManagerActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.TravelAlbumActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.PhotoDisplayActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.MaintenanceMileageEditActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.NicknameEditActivity"
+                  android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.setting.AboutDorideActivity"/>
-        <activity android:name=".ui.activity.setting.PhoneAuthenticationActivity"/>
-        <activity android:name=".ui.activity.setting.ResetCetifiedPhoneActivity"/>
-        <activity android:name=".ui.activity.setting.AccountSecurityActivity"/>
-        <activity android:name=".ui.activity.carstate.CarTiresStateActivity"/>
-        <activity android:name=".ui.activity.setting.RemotePasswdManageActivity"/>
-        <activity android:name=".ui.activity.setting.ResetRemotePasswdActivity"/>
-        <activity android:name=".ui.activity.setting.VcodeResetRemotePasswdActivity"/>
-        <activity android:name=".ui.activity.setting.MsgManageActivity"/>
-        <activity android:name=".ui.activity.setting.DeviceManageActivity"/>
-        <activity android:name=".ui.activity.setting.LoginPasswdManageActivity"/>
-        <activity android:name=".ui.activity.setting.ResetLoginPasswdActivity"/>
-        <activity android:name=".ui.activity.setting.VcodeResetPasswdActivity"/>
-        <activity android:name=".ui.activity.setting.TermsDeclareActivity"/>
-        <activity android:name=".ui.activity.setting.CarModeListActivity"/>
-        <activity android:name=".ui.activity.setting.CarTypeListActivity"/>
-        <activity android:name=".ui.activity.setting.PersonAvatarActivity"/>
-        <activity android:name=".ui.activity.carstate.FindCarActivity"/>
-        <activity android:name=".ui.activity.carstate.LocationSynchronizeActivity"/>
-        <activity android:name=".ui.activity.remote.RemotePswResetActivity3"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarConditionActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarFillIllegalActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarListActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarForHelpActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarMainActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarQueryIllegalActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarQueryIllegalDetailActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarSafetyActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarTestActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.CarTirePressureActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.FindCarActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.NavigationTocarActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.car.SearchAddrActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.AddressMapActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.CareerMainActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.MaintainLogActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.MaintainLogDetialActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.RewardDetailActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryActivityNew"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryAppointmentActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryRemoteActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryTipsActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.remote.RemoteLogActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.remote.RemoteMainActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.remote.RemoteMainNewActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.AuthorActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.FreezeActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.LoginLogActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.ManagePswActiviy"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.MobileListActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.RealNameActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswEditActivity"/>
-        <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswResetActivity1"/>
+        <activity android:name=".ui.activity.setting.PhoneAuthenticationActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.ResetCetifiedPhoneActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.AccountSecurityActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.CarTiresStateActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.RemotePasswdManageActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.ResetRemotePasswdActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.VcodeResetRemotePasswdActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.MsgManageActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.DeviceManageActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.LoginPasswdManageActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.ResetLoginPasswdActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.VcodeResetPasswdActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.TermsDeclareActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.CarModeListActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.CarTypeListActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.setting.PersonAvatarActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.FindCarActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.carstate.LocationSynchronizeActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.remote.RemotePswResetActivity3"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarConditionActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarFillIllegalActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarListActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarForHelpActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarMainActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarQueryIllegalActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarQueryIllegalDetailActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarSafetyActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarTestActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.CarTirePressureActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.FindCarActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.NavigationTocarActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.car.SearchAddrActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.AddressMapActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.CareerMainActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.MaintainLogActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.MaintainLogDetialActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.RewardDetailActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryActivityNew"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryAppointmentActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryRemoteActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.career.SecretaryTipsActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.remote.RemoteLogActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.remote.RemoteMainActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.remote.RemoteMainNewActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.AuthorActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.FreezeActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.LoginLogActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.ManagePswActiviy"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.MobileListActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.RealNameActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswEditActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswResetActivity1"
+                  android:screenOrientation="portrait"/>
         <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswResetActivity2"/>
         <activity android:name="com.carlt.sesame.ui.activity.safety.RemotePswResetActivity3"/>
         <activity android:name="com.carlt.sesame.ui.activity.safety.SafetyMainActivity"/>
