--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ android {
             signingConfig signingConfigs.release
         }
     }
-    sourceSets{
-        main{
+    sourceSets {
+        main {
             jniLibs.srcDir 'jniLibs'
             jni.srcDirs = []
         }
@@ -80,10 +80,11 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     compile 'com.blankj:utilcode:1.7.1'
     implementation files('libs/alipaySdk-20160223.jar')
-    implementation files('libs/ZXingCode.jar')
+//    implementation files('libs/ZXingCode.jar')
     implementation files('libs/Xg_sdk_v3.2.5_20180720_1612.jar')
     implementation files('libs/mid-core-sdk-4.0.6.jar')
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation files('libs/photoview.jar')
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
 }
